--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mona-health/react-input-mask": "^3.0.3",
     "@reduxjs/toolkit": "^2.2.5",
     "clsx": "^2.1.1",
+    "mongoose": "^8.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
