--- a/backend/package.json
+++ b/backend/package.json
@@ -30,11 +30,11 @@
     "body-parser": "^1.20.3",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-winston": "^4.2.0",
     "joi": "^17.13.3",
     "mongoose": "^8.3.2",
-    "validator": "^13.11.0",
     "winston": "^3.17.0"
   }
 }
